--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -34,11 +34,15 @@
 }
 
 @layer components {
-  .btn-link {
-    @apply block text-center text-cloud-burst font-medium bg-white py-2.5 w-full rounded-[8px]  transition duration-100 active:ring active:ring-2 active:ring-cloud-burst;
+  .btn-secondary-outlined {
+    @apply block border border-silver text-center text-soft-blue font-medium bg-white py-2.5 w-full rounded-[8px] transition duration-100 active:ring active:ring-2 active:ring-soft-blue active:bg-periwinkle;
   }
 
-  .btn-outline {
-    @apply block border border-silver text-center text-soft-blue font-medium bg-white py-2.5 w-full rounded-[8px] transition duration-100 active:ring active:ring-2 active:ring-soft-blue active:bg-periwinkle;
+  .btn-secondary {
+    @apply block text-center text-cloud-burst font-medium bg-white py-2.5 w-full rounded-[8px] transition duration-100 active:ring active:ring-2 active:ring-cloud-burst;
+  }
+
+  .btn-primary {
+    @apply block text-center text-white font-medium bg-soft-blue py-2.5 w-full rounded-[8px] transition duration-100 active:bg-[#4663B8];
   }
 }
